# prova

./: README.md
backend/contract/: anchor.toml  arcium.toml  cargo.toml
backend/contract/programs/prova_executor/: cargo.toml
backend/contract/programs/prova_registry/: cargo.toml
backend/contract/sp1-prover/program/src/: main.rs
backend/contract/sp1-prover/script/: cargo.toml
backend/nodejs/: .env.example  config.ts  frontend.index.ts  index.ts  logger.ts  package.json  solanaSubmitter.ts  tsconfig.json  types.ts
backend/nodejs/monitor/src/: config.js  config.ts  ethWatcher.js  ethWatcher.ts  index.js  index.ts  logger.js  proofGenerator.js  proofGenerator.ts  registryloader.js  registryloader.ts  solanaSubmitter.js  solanaSubmitter.ts
backend/nodejs/sdk/src/: ProvaSDK.js  ProvaSDK.ts  index.js  registerRule.js  registerRule.ts  ruleStatus.js  ruleStatus.ts  types.js
backend/prova/: Anchor.toml  Cargo.toml  package.json
backend/prova/encrypted-ixs/src/: execute_transfer.rs  lib.rs
backend/prova/noir_prover/: Nargo.toml  Prover.toml
backend/prova/noir_prover/scripts/: fetch_witness.js  package.json
backend/prova/noir_prover/src/: main.nr  sss.toml
backend/prova/patches/: @arcium-hq+client+0.9.7.patch
backend/prova/programs/prova/: Cargo.toml
backend/prova/programs/prova/src/: lib.rs
backend/prova/programs/prova_executor/: Cargo.toml
backend/prova/programs/prova_executor/src/: demo.rs  errors.rs  lib.rs  proof_helper.rs  vk.rs
backend/prova/programs/prova_registry/: Cargo.toml
backend/prova/programs/prova_registry/src/: lib.rs
backend/prova/solana_gen_vk/: .env.example  Cargo.toml  README.md
backend/prova/solana_gen_vk/src/: main.rs
backend/prova/sp1-prover/: Cargo.toml
backend/prova/sp1-prover/program/: cargo.toml
backend/prova/sp1-prover/program/src/: main.rs
backend/prova/sp1-prover/script/: cargo.toml
backend/prova/sp1-prover/script/src/: lib.rs  main.rs
backend/prova/tests/: prova.ts
frontend/: .env.example  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/assets/json/: prova_registry.json
frontend/src/components/: Architecture.tsx  BusinessModel.tsx  Cta.tsx  Demo.tsx  Footer.tsx  Hero.tsx  HowitWorks.tsx  Navbar.tsx  Ticker.tsx  WhyProva.tsx
frontend/src/lib/: actions.ts
frontend/src/pages/: Apppage.tsx
frontend/src/providers/: SolanaProvider.tsx
frontend/src/router/: index.tsx
frontend/src/utils/: constants.ts
