[workspace]
members  = ["program", "script"]
resolver = "2"

[workspace.dependencies]
sp1-sdk          = { version = "=4.0.0" }
sp1-zkvm         = { version = "=4.0.0", features = ["bump"] }
alloy-primitives = { version = "1.5" }
serde            = { version = "1.0", features = ["derive"] }
serde_json       = "1.0"
hex              = "0.4"
anyhow           = "1.0"
tokio            = { version = "1", features = ["full"] }
reqwest          = { version = "0.12", features = ["json"] }
clap             = { version = "4", features = ["derive", "env"] }