[package]
name = "prova_executor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prova_executor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang   = { workspace = true }
anchor-spl    = { workspace = true }
arcium-anchor = { workspace = true }
sp1-solana    = { workspace = true }
borsh         = { workspace = true }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(target_os = \"solana\")"] }