[package]
name    = "prova_executor"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(target_os, values(\"solana\"))"] }

[lib]
crate-type = ["cdylib", "lib"]
name       = "prova_executor"

[dependencies]
anchor-lang   = { workspace = true }
arcium-client  = { workspace = true }
anchor-spl    = { workspace = true }
arcium-anchor = { workspace = true }
sp1-solana    = { workspace = true }
borsh         = { workspace = true }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]