[package]
name    = "prova_registry"
version = "0.1.0"
edition = "2021"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(target_os, values(\"solana\"))"] }

[lib]
crate-type = ["cdylib", "lib"]
name       = "prova_registry"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]